This commit was manufactured by cvs2git to create branch 'RA-branch'.
Sprout from master 2003-04-09 15:19:28 UTC Jakub Bogusz <qboosh@pld-linux.org> '- added sec patch (buffer overflow)'
Cherrypick from master 2002-02-10 15:24:16 UTC wolf <wolf@pld-linux.org> '235958ef0290f90e2de13974dc3ca529  rogue.desktop':
    rogue.desktop -> 1.1

--- a/rogue.desktop
+++ b/rogue.desktop
@@ -1,12 +1,5 @@
 [Desktop Entry]
-Name=Rogue
-Name[ar]=روج
-Name[bg]=Измамник
-Name[eo]=Fripono
-Name[lt]=Išdykėlis
-Name[lv]=Blēdis
-Name[pt_BR]=Selvagem
-Name[uk]=Тать
+Name=rogue
 Comment=The very first roguelike game
 Comment[pl]=Najpierwsza gra roguelike
 Icon=rogue.png
